<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_operator2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".Game.GameSaveActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:padding="20dp"
      android:layout_marginBottom="30dp"
      android:orientation="vertical"
      android:background="@drawable/bg_border_edit_green"
      android:gravity="center"
      tools:context=".Game.GameSaveActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_score_is"
        android:fontFamily="@font/architects_daughter"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/_70"
        android:textStyle="bold"
        android:textColor="@color/Purple"
        android:textSize="42sp" />


  </LinearLayout>
  <android.widget.Button
      android:id="@+id/save_btn"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:background="@drawable/bg_border_blue"
      android:fontFamily="@font/architects_daughter"
      android:textStyle="bold"

      android:text="@string/save"
      android:textColor="@color/white"
      android:textSize="30sp" />

  <android.widget.Button
      android:id="@+id/playAgain_btn"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:background="@drawable/bg_border_red"
      android:text="@string/game_return"
      android:fontFamily="@font/architects_daughter"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:textSize="30sp" />

  </LinearLayout>