<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Game.GameSaveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_top"
        android:gravity="center"
        android:orientation="horizontal"
        tools:context=".Game.GameSaveActivity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/Yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/answer"
            android:textColor="@color/Yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/your_answer"
            android:textColor="@color/Yellow"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:layout_weight="1"
        android:background="@drawable/bg_border_bottom"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        tools:context=".Game.GameSaveActivity">

        <android.widget.Button
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_left"
            android:text="home"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <android.widget.Button
            android:id="@+id/replay_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_btn"
            android:text="replay"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <android.widget.Button
            android:id="@+id/draw_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_right"
            android:text="draw"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </LinearLayout>

</LinearLayout>